subdir('example_cam')
subdir('example_sink')

if have_tensorflow
  subdir('example_object_detection_tensorflow')
endif

if have_tensorflow_lite
  subdir('example_image_classification')
  subdir('example_object_detection_tensorflow_lite')
  subdir('example_decoder_image_labelling')
  subdir('example_filter_performance_profile')
endif
