nnstreamer_example_image_classification = executable('nnstreamer_example_image_classification',
  'nnstreamer_example_image_classification.c',
  dependencies: [glib_dep, gst_dep],
  install: true,
  install_dir: examples_install_dir
)

# Install python example
install_data('nnstreamer_example_image_classification.py',
  install_dir: examples_install_dir
)
