nnstreamer_example_image_classification_tflite = executable('nnstreamer_example_image_classification_tflite',
  'nnstreamer_example_image_classification_tflite.c',
  dependencies: [glib_dep, gst_dep],
  install: true,
  install_dir: examples_install_dir
)

# Install python example
install_data('nnstreamer_example_image_classification_tflite.py',
  install_dir: examples_install_dir
)
