executable('nnstreamer_example_speech_command_tflite',
  'nnstreamer_example_speech_command_tflite.c',
  dependencies: [glib_dep, gst_dep],
  install: true,
  install_dir: examples_install_dir
)

library('nnscustom_speech_command_tflite',
  'nnscustom_speech_command_tflite.c',
  install: true,
  install_dir: examples_install_dir
)
